fix translation display on mobile

--- a/src/components/languageSelector/LanguageSelector.scss
+++ b/src/components/languageSelector/LanguageSelector.scss
@@ -47,7 +47,7 @@
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(15rem, 1fr));
     padding: 0.8rem;
-    max-height: 80dvh;
+    max-height: 75dvh;
     overflow-y: auto;
 
     &.search-active {
