--- a/src/pages/translate/Translate.scss
+++ b/src/pages/translate/Translate.scss
@@ -112,7 +112,7 @@
             color: $color-placeholder;
           }
 
-          &:disabled {
+          &:read-only {
             background: #fff;
             margin-bottom: 1rem;
             color: $color-black;
